# omnirecall

./: -o  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPTIMIZATION_ISSUES.md  README.md  UI_HCI_ANALYSIS.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
demo/: .gitkeep  README.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: chat.rs  documents.rs  mod.rs  providers.rs  settings.rs  spaces.rs
src-tauri/src/services/: ai_client.rs  document_pipeline.rs  embedding.rs  mod.rs  vector_store.rs
src/components/common/: BranchSelector.tsx  CommandPalette.tsx  ExportImport.tsx  FolderManager.tsx  KeyboardShortcuts.tsx  Markdown.tsx  ModelCompare.tsx  ModelSelector.tsx  Onboarding.tsx  RagDebugPanel.tsx  Skeleton.tsx  Toast.tsx  TokenCounter.tsx  WindowControls.tsx
src/components/dashboard/: ChatArea.tsx  Dashboard.tsx  DocumentDrawer.tsx  Sidebar.tsx
src/components/icons/: index.tsx
src/components/settings/: Settings.tsx
src/components/spotlight/: Spotlight.tsx
src/hooks/: useAutoResize.ts  useChatSubmit.ts  useClickOutside.ts  useDebouncedSearch.ts  useDocumentLoader.ts
src/stores/: appStore.ts  toastStore.ts
src/styles/: globals.css
